<resources>
    <string name="app_name">Home</string>
    <string name="halo">Bagaimana Kabar Anda Hari Ini!</string>
    <string name="button_label_max">Max</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Button</string>
    <string name="textview">TextView</string>
    <string name="button_label_hitung">Hitung</string>
    <string name="hitung_initial_value">0</string>
    <string name="toast_pesan">Hebat Bro!</string>
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="text_max">0</string>
    <string name="button_label_back">Back</string>

    <string name="article_title">Kasus Sianida</string>
    <string name="article_subtitle">ICE COLD</string>

<string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the Let It Be album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series. For more information, see the Beatles Time Capsule at www.rockument.com. \n\n This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on The Lost Lennon Tapes Vol. 28, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions. \n\n

Highlights include: \n\n

Cry for a Shadow – Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs. \n\n

My Bonnie and Ain’t She Sweet — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal). \n\n

Searchin — A Jerry Leiber – Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys! \n\n

Love Me Do — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version. \n\n

She Loves You – Till There Was You – Twist and Shout — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark. \n\n

Leave My Kitten Alone — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker. \n\n

One After 909 — A song recorded for the ¨C11C album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R B feel to it.</string>




    <string name="goblin">
        Melansir Asian Wiki, serial Goblin menceritakan tentang Kim Shin, seorang jenderal perang yang hebat di zaman kuno.\n
        Ia dibunuh oleh raja muda yang cemburu pada kehebatannya.
        Kim Shin akhirnya menjadi Dokkaebi (Goblin), yang memiliki kehidupan abadi.\n\n
        Pada awalnya, keabadian adalah sebuah anugerah, tapi nyatanya malah sebuah kutukan.
        Untuk mengakhiri kutukan tersebut, ia harus menunggu 900 tahun lamanya.\n
        Suatu malam, ia menyelamatkan seorang ibu hamil yang sekarat dan ditakdirkan untuk mati.
        Sementara itu, malaikat maut yang disebut Grim Reaper harusnya mencabut nyawa wanita hamil tersebut.
        Namun, malaikat maut tidak dapat menemukannya, karena diselamatkan oleh Kim Shin sang Goblin.
        Wanita tersebut akhirnya melahirkan seorang bayi perempuan bernama Ji Eun-Tak.\n\n
        Sembilan tahun kemudian, Ji Eun-Tak tinggal bersama ibunya dan bisa melihat hantu.
        Tak lama, ibunya tiba-tiba meninggal. Kematian ibunya membuat Ji Eun-Tak harus tinggal bersama bibinya.
        Sayangnya, sang bibi tidak memperlakukan Ji Eun-Tak dengan baik.
        Ji Eun-Tak pun menginjak usia remaja. Kemampuannya melihat hantu dan mendengar bisikan mengenai "pengantin Goblin" terus menghantuinya.\n\n
        Di hari ulang tahunnya, Ji Eun-Tak duduk di tepi laut dengan kue ulang tahun dan lilin yang menyala.
        Saat itu, Kim Shin tiba-tiba muncul di hadapannya.
        Kim Shin tidak tahu kenapa. Tapi, dia bisa mendengar suaranya, bahkan muncul di hadapannya di luar kehendak dirinya.
        Kim Shin akan selalu muncul ketika Ji Eun-Tak mematikan lampu.
        Melihat hal tersebut, Ji Eun-Tak yakin bahwa dirinya adalah pengantin Goblin, dan Kim Shin adalah sang Goblin.\n\n
        Dalam drama ini, Goblin digambarkan sebagai manusia yang mendapat kutukan berupa hidup abadi.
        Namun, berdasarkan mitologi Korea, Goblin atau Dokkaebi adalah tokoh legenda.
        Ia digambarkan sebagai dewa alam yang memiliki kekuatan luar biasa untuk berinteraksi dengan manusia.\n\n
        Jadi, ada perbedaan sosok Goblin dalam drama dengan Goblin dalam mitologi Korea.\n\n
        Nah, bagaimana kelanjutan kisah Kim Shin untuk mengakhiri kutukan? Lantas, apa arti dari pengantin Goblin yang sebenarnya?
    </string>
</resources>